--- a/KPMG_Virtual_Data_Analytics_Internship.ipynb
+++ b/KPMG_Virtual_Data_Analytics_Internship.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPY38H/rZOQQF0RUdL9bmiP",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPGIShXImkOiF9d+HgZO9lB"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/idowujames/KPMG-Virtual-Data-Analytics-Internship/blob/main/KPMG_Virtual_Data_Analytics_Internship.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": 2,
@@ -868,6 +857,21 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Accessment**\n",
+        "\n",
+        "- There are 13 columns\n",
+        "\n",
+        "- There are missing values in the `online_order`, `brand`, `product_line`, `product_class`, `product_size`, `standard_cost` and `product_first_sold_date` columns\n",
+        "\n",
+        "- The `product_first_sold_date` column is given as numbers instead of dates."
+      ],
+      "metadata": {
+        "id": "p6mfMTcExW-L"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Accessing The Customer Address Data"
       ],
       "metadata": {
@@ -1068,6 +1072,229 @@
           "execution_count": 36
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cust_address.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BcCyUmtEuhwU",
+        "outputId": "cc087408-f791-4c5d-adbd-84a3dc8d4fa0"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 3999 entries, 0 to 3998\n",
+            "Data columns (total 6 columns):\n",
+            " #   Column              Non-Null Count  Dtype \n",
+            "---  ------              --------------  ----- \n",
+            " 0   customer_id         3999 non-null   int64 \n",
+            " 1   address             3999 non-null   object\n",
+            " 2   postcode            3999 non-null   int64 \n",
+            " 3   state               3999 non-null   object\n",
+            " 4   country             3999 non-null   object\n",
+            " 5   property_valuation  3999 non-null   int64 \n",
+            "dtypes: int64(3), object(3)\n",
+            "memory usage: 187.6+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Checking for duplicates entries accross the dataset\n",
+        "cust_address[cust_address.duplicated()]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 49
+        },
+        "id": "LQn10yvivBLc",
+        "outputId": "2d20ee37-8ea6-4e45-a844-e520ad202149"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Empty DataFrame\n",
+              "Columns: [customer_id, address, postcode, state, country, property_valuation]\n",
+              "Index: []"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-1e319a03-8464-481a-b4a8-31c096d0cbec\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>customer_id</th>\n",
+              "      <th>address</th>\n",
+              "      <th>postcode</th>\n",
+              "      <th>state</th>\n",
+              "      <th>country</th>\n",
+              "      <th>property_valuation</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1e319a03-8464-481a-b4a8-31c096d0cbec')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-1e319a03-8464-481a-b4a8-31c096d0cbec button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-1e319a03-8464-481a-b4a8-31c096d0cbec');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Getting unique values in the categorical columns to confirm the correctness of values\n",
+        "columns = ['state','country']\n",
+        "print(\"Unique Values - \")\n",
+        "for value in cust_address[columns]:\n",
+        "  print(f\"{value}: {cust_address[value].unique()}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nBbpldHpvmAl",
+        "outputId": "3d89dd31-b1ff-4429-9d79-2dd99ca734f6"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Unique Values - \n",
+            "state: ['New South Wales' 'QLD' 'VIC' 'NSW' 'Victoria']\n",
+            "country: ['Australia']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Accessment**\n",
+        "\n",
+        "- There are 6 columns.\n",
+        "\n",
+        "- No missing values.\n",
+        "\n",
+        "- Postcode column should be string instead of number.\n",
+        "\n",
+        "\n",
+        "Seems everything else in the dataset is fine"
+      ],
+      "metadata": {
+        "id": "oYmRwVNVwi3q"
+      }
     },
     {
       "cell_type": "markdown",
